--- a/package.json
+++ b/package.json
@@ -28,5 +28,7 @@
     "imagemin-pngquant": "^6.0.0",
     "node-sass": "^4.10.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "wowjs": "^1.1.3"
+  }
 }
